z-index fixes

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -4,7 +4,6 @@ main.home {
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	z-index: 1;
 
 	@include themify() {
 		background-color: themed("navBackgroundColor");
@@ -151,6 +150,7 @@ main.home {
 
 .legal {
 	padding: 0.5em;
+	z-index: 20;
 	> .legal-links {
 		display: grid;
 		grid-template-columns: auto auto;
